--- a/ASPtest/Web.config
+++ b/ASPtest/Web.config
@@ -5,6 +5,11 @@
   https://go.microsoft.com/fwlink/?LinkId=169433 を参照してください
   -->
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="ASPtest.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <system.web>
     <compilation debug="true" strict="false" explicit="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
@@ -20,4 +25,14 @@
     </compilers>
   </system.codedom>
 
+  <applicationSettings>
+    <ASPtest.My.MySettings>
+      <setting name="ServerName" serializeAs="String">
+        <value>DESKTOP-RV74K59</value>
+      </setting>
+      <setting name="DatabaseName" serializeAs="String">
+        <value>ecsTest</value>
+      </setting>
+    </ASPtest.My.MySettings>
+  </applicationSettings>
 </configuration>
