--- a/ASPtest/ASPtest.vbproj
+++ b/ASPtest/ASPtest.vbproj
@@ -96,6 +96,7 @@
     <Content Include="WebForm1.aspx" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class_SQLSERVER.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
